2010-02-27 Andras Varga

    * Added optionName() method

2010-02-26 Andras Varga

    * Broke up long function TCPConnection::readHeaderOptions()

    * minor refactoring to increase readability

2010-02-26 Andras Varga

    * Fixed following issues with patch submitted by Thomas Reschka:
        - assertion in TCPConnectionUtil.cc line 1056 after reception of SYN duplicate. See bug #121
		- too early transition from ESTABLISHED to CLOSE_WAIT state
		  when FIN has been received but segments have been lost before. See bug #139
        - unnecessary delay before sending the last data segment if nagle is enabled

2010-02-16 Rudolf Hornig

    * Fixed 'FIN does not get retransmitted' issue with patch submitted by Andras Varga and Thomas Reschka. See bug #123

2010-02-11 Rudolf Hornig

	* Fixed assert issue in TCPVirtualDataSendQueue.cc line 60 with patch submitted by Thomas Reschka. See bug #122

2010-02-10 Zoltan Bojthe

    * Fixed 'advertised window' issue

2010-02-02 Zoltan Bojthe

    * Added checking value of advertisedWindow parameter

2009-11-27 Thomas Reschka

    * implemented TCPNewReno algorithm (RFC 3782):
        - the implementation is based on the 'default' algorithm specified in section 3 of RFC 3782.
        - algorithm variants (RFC 3782, sections 4-6) are NOT IMPLEMENTED.

2009-10-27 Rudolf Hornig

    * Added ITCP module interface that is implemented by TCP and TCP_old

    * The old TCP (SACK-less) implementation is available as TCP_old

    * TCP (default) and TCP_old can be selected in StandardHost with the new tcpType parameter

2009-10-27 Thomas Reschka

    * implemented SACK TCP:
      - the basic SACK implementation (RFC 2018 and RFC 2883)
        is located in TCP main (and not in flavours). This means that all existing
        TCP algorithm classes may be used with SACK, although currently only TCPReno
        makes sense.
      - implemented (SACK)-based Loss Recovery algorithm (RFC 3517)