@@ -71,8 +71,8 @@ bool SCTPAssociation::process_RCV_Message(SCTPMessage*       sctpmsg,
     }
 
     SCTPPathVariables* path      = getPath(src);
-    const int32  srcPort             = sctpmsg->getDestPort();
-    const int32  destPort        = sctpmsg->getSrcPort();
+    const uint16 srcPort         = sctpmsg->getDestPort();
+    const uint16 destPort        = sctpmsg->getSrcPort();
     const uint32 numberOfChunks = sctpmsg->getChunksArraySize();
     sctpEV3 << "numberOfChunks=" <<numberOfChunks << endl;
 
