@@ -35,7 +35,7 @@ void TCPConnection::process_OPEN_ACTIVE(TCPEventCode& event, TCPCommand *tcpComm
 {
     TCPOpenCommand *openCmd = check_and_cast<TCPOpenCommand *>(tcpCommand);
     IPvXAddress localAddr, remoteAddr;
-    short localPort, remotePort;
+    int localPort, remotePort;
 
     switch(fsm.getState())
     {
@@ -81,7 +81,7 @@ void TCPConnection::process_OPEN_PASSIVE(TCPEventCode& event, TCPCommand *tcpCom
 {
     TCPOpenCommand *openCmd = check_and_cast<TCPOpenCommand *>(tcpCommand);
     IPvXAddress localAddr;
-    short localPort;
+    int localPort;
 
     switch(fsm.getState())
     {
