@@ -173,10 +173,10 @@ void UDP::unbind(int sockId)
     delete sd;
 }
 
-short UDP::getEphemeralPort()
+ushort UDP::getEphemeralPort()
 {
     // start at the last allocated port number + 1, and search for an unused one
-    short searchUntil = lastEphemeralPort++;
+    ushort searchUntil = lastEphemeralPort++;
     if (lastEphemeralPort == EPHEMERAL_PORTRANGE_END) // wrap
         lastEphemeralPort = EPHEMERAL_PORTRANGE_START;
 
@@ -255,7 +255,7 @@ bool UDP::matchesSocket(SockDesc *sd, UDPPacket *udp, IPv6ControlInfo *ipCtrl)
     return true;
 }
 
-bool UDP::matchesSocket(SockDesc *sd, const IPvXAddress& localAddr, const IPvXAddress& remoteAddr, short remotePort)
+bool UDP::matchesSocket(SockDesc *sd, const IPvXAddress& localAddr, const IPvXAddress& remoteAddr, ushort remotePort)
 {
     return (sd->remotePort==0 || sd->remotePort!=remotePort) &&
            (sd->localAddr.isUnspecified() || sd->localAddr==localAddr) &&
@@ -328,7 +328,7 @@ void UDP::processICMPError(cPacket *msg)
     // extract details from the error message, then try to notify socket that sent bogus packet
     int type, code;
     IPvXAddress localAddr, remoteAddr;
-    int localPort, remotePort;
+    ushort localPort, remotePort;
 
     if (dynamic_cast<ICMPMessage *>(msg))
     {
@@ -390,7 +390,7 @@ void UDP::processICMPError(cPacket *msg)
     sendUpErrorNotification(srcSocket, UDP_I_ERROR, localAddr, remoteAddr, remotePort);
 }
 
-void UDP::sendUpErrorNotification(SockDesc *sd, int msgkind, const IPvXAddress& localAddr, const IPvXAddress& remoteAddr, short remotePort)
+void UDP::sendUpErrorNotification(SockDesc *sd, int msgkind, const IPvXAddress& localAddr, const IPvXAddress& remoteAddr, ushort remotePort)
 {
     cPacket *notifyMsg = new cPacket("ERROR", msgkind);
     UDPControlInfo *udpCtrl = new UDPControlInfo();
