@@ -1,3 +1,7 @@
+2010-03-26  Andras Varga
+
+	* fix: represent port numbers with ushort
+
 2010-03-01 Andras Varga
 
 	* Fixed following issues with patch submitted by Thomas Reschka:
