@@ -1,3 +1,7 @@
+2010-03-26  Andras Varga
+
+	* fix: represent port numbers with ushort
+
 2008-06-29  Andras Varga
 
 	* factored out createUDPPacket()
