@@ -1,3 +1,9 @@
+2010-03-26  Andras Varga
+
+	* fix: represent port numbers with ushort. Previously it was short 
+	at places, which caused problems for large port numbers due to sign 
+	extension [reported by Thomas Gamer]
+
 2010-02-27 Andras Varga
 
     * Added optionName() method
